samples/_failures_safe/1761162200_e4a3b6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3371ed7.c: In function ‘main’:
./samples/SAFE/__tmp_e3371ed7.c:152:17: error: expected declaration or statement at end of input
  152 |                 }
      |                 ^
./samples/SAFE/__tmp_e3371ed7.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e3371ed7.c:152:17: error: expected declaration or statement at end of input
